# StanceBench

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
examples/notebooks/: analyze_all_paper.ipynb
metadata/: category_roles.csv  questions_main.json
models/gemini_audio/: run_turnover_gemini.py
models/gpt_audio/: run_turnover_gpt_QA.py
models/granite_speech/: run_turnover_granite_QA.py
models/kimi_audio/: run_turnover_KIMI.py
models/qwen_omni/: run_turnover_qwen_QA.py
models/qwen_transcript_ablation/: run_turnover_qwenAblation_QA.py
notebooks/: analyze_all_paper.ipynb
scripts/: build_eval_inputs.py  filter_roles.py  select_one_question.py  turnover_extractor_IPU.py
stancebench/: __init__.py  cli.py  config.py  dimensions.py  metrics.py  pipeline.py  validation.py
stancebench/examples/notebooks/: analyze_all_paper.ipynb
stancebench/metadata/: questions_main.json
stancebench/models/: __init__.py
stancebench/models/gemini_audio/: __init__.py
stancebench/models/gpt_audio/: __init__.py
stancebench/models/granite_speech/: __init__.py
stancebench/models/kimi_audio/: __init__.py  run_turnover_KIMI.py
stancebench/models/qwen_omni/: __init__.py  run_turnover_qwen_QA.py
stancebench/models/qwen_transcript_ablation/: __init__.py
stancebench/scripts/: __init__.py  build_eval_inputs.py  select_one_question.py  turnover_extractor_IPU.py
tests/: test_cli_public.py
